--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,30 @@
 
   <name>Actuator Endpoints Security Utils</name>
   <description>Utilities to secure actuator endpoints.</description>
+  <url>https://github.com/tbmelabs/actuator-endpoints-security-utils</url>
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <url>https://github.com/tbmelabs/actuator-endpoints-security-utils</url>
+    <connection>scm:git:git://github.com/tbmelabs/actuator-endpoints-security-utils.git</connection>
+    <developerConnection>scm:git:git@github.com:tbmelabs/actuator-endpoints-security-utils.git</developerConnection>
+  </scm>
+
+  <developers>
+    <developer>
+      <name>TBME Labs</name>
+      <email>info@tbmelabs.ch</email>
+      <organization>TBME Labs</organization>
+      <organizationUrl>tbmelabs.ch</organizationUrl>
+    </developer>
+  </developers>
 
   <properties>
     <!-- General configuration -->
@@ -20,42 +44,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+    <!-- Spring dependency management -->
+    <spring.version>2.0.3.RELEASE</spring.version>
+    <spring.security.version>5.0.7.RELEASE</spring.security.version>
+
     <!-- Dependency configuration -->
     <org.mockito.mockito-core.version>2.9.0</org.mockito.mockito-core.version>
+    <org.projectlombok.lombok.version>1.18.2</org.projectlombok.lombok.version>
 
     <!-- Plugin configuration -->
-    <com.spotify.docker-maven-plugin.version>1.1.1</com.spotify.docker-maven-plugin.version>
-    <org.jacoco.jacoco-maven-plugin.version>0.8.1</org.jacoco.jacoco-maven-plugin.version>
-
-    <!-- Test coverage configuration -->
-    <project.build.test-result-directory>${project.build.directory}/test-results</project.build.test-result-directory>
-
-    <org.jacoco.jacoco-maven-plugin.dest-file-path>${project.build.test-result-directory}/coverage/jacoco/jacoco.exec</org.jacoco.jacoco-maven-plugin.dest-file-path>
-    <org.jacoco.jacoco-maven-plugin.output-path>${project.build.test-result-directory}/coverage/jacoco</org.jacoco.jacoco-maven-plugin.output-path>
-
-    <!-- Sonar configuration -->
-    <sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
-    <sonar.issue.ignore.multicriteria>S2068a,S2068b</sonar.issue.ignore.multicriteria>
-    <sonar.issue.ignore.multicriteria.S2068a.ruleKey>squid:S2068</sonar.issue.ignore.multicriteria.S2068a.ruleKey>
-    <sonar.issue.ignore.multicriteria.S2068a.resourceKey>**/UserSignupService.java</sonar.issue.ignore.multicriteria.S2068a.resourceKey>
-    <sonar.issue.ignore.multicriteria.S2068b.ruleKey>squid:S2068</sonar.issue.ignore.multicriteria.S2068b.ruleKey>
-    <sonar.issue.ignore.multicriteria.S2068b.resourceKey>**/ClientGrantType.java</sonar.issue.ignore.multicriteria.S2068b.resourceKey>
-
-    <!-- Sonar report paths for sonar-server >= 6.2 -->
-    <sonar.jacoco.reportPaths>${project.build.test-result-directory}/coverage/jacoco/jacoco.exec</sonar.jacoco.reportPaths>
-    <sonar.javascript.lcov.reportPaths>${project.build.test-result-directory}/coverage/report-lcov/lcov.info</sonar.javascript.lcov.reportPaths>
-
-    <!-- Sonar report paths for sonar-server < 6.2 -->
-    <sonar.jacoco.reportPath>${sonar.jacoco.reportPaths}</sonar.jacoco.reportPath>
-    <sonar.javascript.lcov.reportPath>${sonar.javascript.lcov.reportPaths}</sonar.javascript.lcov.reportPath>
+    <org.sonatype.plugins.nexus-staging-maven-plugin.version>1.6.8</org.sonatype.plugins.nexus-staging-maven-plugin.version>
+    <org.apache.maven.plugins.maven-gpg-plugin.version>1.6</org.apache.maven.plugins.maven-gpg-plugin.version>
   </properties>
-
-  <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.3.RELEASE</version>
-  </parent>
 
   <dependencyManagement>
     <dependencies>
@@ -81,6 +81,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>${org.projectlombok.lombok.version}</version>
       <scope>provided</scope>
     </dependency>
 
@@ -95,6 +96,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <version>${spring.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -111,6 +113,7 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
+      <version>${spring.security.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -124,6 +127,21 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
+      </plugin>
+
+      <!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>${org.sonatype.plugins.nexus-staging-maven-plugin.version}</version>
+
+        <extensions>true</extensions>
+
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
       </plugin>
 
       <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
@@ -177,59 +195,78 @@
           </execution>
         </executions>
       </plugin>
-
-      <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${org.jacoco.jacoco-maven-plugin.version}</version>
-
-        <executions>
-          <!-- download and install JaCoCo agent -->
-          <execution>
-            <id>prepare-agent</id>
-
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-
-            <configuration>
-              <destFile>${org.jacoco.jacoco-maven-plugin.dest-file-path}</destFile>
-            </configuration>
-          </execution>
-
-          <!-- report test coverage -->
-          <execution>
-            <id>post-unit-test</id>
-            <phase>test</phase>
-
-            <goals>
-              <goal>report</goal>
-            </goals>
-
-            <configuration>
-              <dataFile>${org.jacoco.jacoco-maven-plugin.dest-file-path}</dataFile>
-              <outputDirectory>${org.jacoco.jacoco-maven-plugin.output-path}</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 
-  <reporting>
-    <plugins>
-      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <show>public</show>
-          <nohelp>true</nohelp>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
+  <profiles>
+    <profile>
+      <id>sign</id>
+
+      <build>
+        <plugins>
+          <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>${org.apache.maven.plugins.maven-gpg-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+
+                <phase>verify</phase>
+
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>build-extras</id>
+
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+
+      <build>
+        <plugins>
+          <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <distributionManagement>
     <snapshotRepository>
