--- a/pom.xml
+++ b/pom.xml
@@ -1,83 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>bom</artifactId>
-    <packaging>pom</packaging>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>bom</artifactId>
+	<packaging>pom</packaging>
 
-    <name>TBME Labs | Bom</name>
-    <description>TBME Labs specific dependency management.</description>
-    <url>https://github.com/tbmelabs/tbmelabs-bom</url>
+	<name>TBME Labs | Bom</name>
+	<description>TBME Labs specific dependency management.</description>
+	<url>https://github.com/tbmelabs/tbmelabs-bom</url>
 
-    <licenses>
-        <license>
-            <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-    <scm>
-        <url>https://github.com/tbmelabs/tbmelabs-bom</url>
-        <connection>scm:git:git://github.com/tbmelabs/tbmelabs-bom.git</connection>
-        <developerConnection>scm:git:git@github.com:tbmelabs/tbmelabs-bom.git</developerConnection>
-    </scm>
+	<scm>
+		<url>https://github.com/tbmelabs/tbmelabs-bom</url>
+		<connection>scm:git:git://github.com/tbmelabs/tbmelabs-bom.git</connection>
+		<developerConnection>scm:git:git@github.com:tbmelabs/tbmelabs-bom.git</developerConnection>
+	</scm>
 
-    <developers>
-        <developer>
-            <name>TBME Labs</name>
-            <email>info@tbmelabs.ch</email>
-            <organization>TBME Labs</organization>
-            <organizationUrl>tbmelabs.ch</organizationUrl>
-        </developer>
-    </developers>
+	<developers>
+		<developer>
+			<name>TBME Labs</name>
+			<email>info@tbmelabs.ch</email>
+			<organization>TBME Labs</organization>
+			<organizationUrl>tbmelabs.ch</organizationUrl>
+		</developer>
+	</developers>
 
-    <parent>
-        <!-- DOTO: Update on release -->
-        <!-- https://oss.sonatype.org/content/repositories/snapshots/ch/tbmelabs/parent/ -->
-        <groupId>ch.tbmelabs</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<!-- DOTO: Update on release -->
+		<!-- https://oss.sonatype.org/content/repositories/snapshots/ch/tbmelabs/parent/ -->
+		<groupId>ch.tbmelabs</groupId>
+		<artifactId>parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
 
-    <properties>
-        <!-- TBME Labs specific configuration -->
-        <ch.tbmelabs.version>1.0.0-SNAPSHOT</ch.tbmelabs.version>
-        <ch.tbmelabs.tv.version>1.0.0-SNAPSHOT</ch.tbmelabs.tv.version>
-    </properties>
+	<properties>
+		<!-- TBME Labs specific configuration -->
+		<ch.tbmelabs.version>1.0.0-SNAPSHOT</ch.tbmelabs.version>
+		<ch.tbmelabs.tv.version>1.0.0-SNAPSHOT</ch.tbmelabs.tv.version>
+	</properties>
 
-    <dependencies>
-        <!-- DOTO: Update on release -->
-        <!-- https://oss.sonatype.org/content/repositories/snapshots/ch/tbmelabs/actuator-endpoints-security-utils/ -->
-        <dependency>
-            <groupId>ch.tbmelabs</groupId>
-            <artifactId>actuator-endpoints-security-utils</artifactId>
-            <version>${ch.tbmelabs.version}</version>
-        </dependency>
+	<dependencyManagement>
+		<dependencies>
+			<!-- DOTO: Update on release -->
+			<!-- https://oss.sonatype.org/content/repositories/snapshots/ch/tbmelabs/actuator-endpoints-security-utils/ -->
+			<dependency>
+				<groupId>ch.tbmelabs</groupId>
+				<artifactId>actuator-endpoints-security-utils</artifactId>
+				<version>${ch.tbmelabs.version}</version>
+			</dependency>
 
-        <!-- DOTO: Update on release -->
-        <!-- https://oss.sonatype.org/content/repositories/snapshots/ch/tbmelabs/server-constants/ -->
-        <dependency>
-            <groupId>ch.tbmelabs</groupId>
-            <artifactId>server-constants</artifactId>
-            <version>${ch.tbmelabs.version}</version>
-        </dependency>
-    </dependencies>
+			<!-- DOTO: Update on release -->
+			<!-- https://oss.sonatype.org/content/repositories/snapshots/ch/tbmelabs/server-constants/ -->
+			<dependency>
+				<groupId>ch.tbmelabs</groupId>
+				<artifactId>server-constants</artifactId>
+				<version>${ch.tbmelabs.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
-    <repositories>
-        <repository>
-            <id>ossrh-snapshot</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
+	<repositories>
+		<repository>
+			<id>ossrh-snapshot</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
 
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
