--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,13 @@
         <!-- https://oss.sonatype.org/service/local/repositories/releases/content/ch/tbmelabs/parent/ -->
         <groupId>ch.tbmelabs</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
-        <!-- TBME Labs specific configuration -->
-        <ch.tbmelabs.version>1.0.0</ch.tbmelabs.version>
+        <actuator-endpoints-security-utils.version>1.0.1-SNAPSHOT</actuator-endpoints-security-utils.version>
+        <server.constants>1.0.1-SNAPSHOT</server.constants>
     </properties>
 
     <dependencyManagement>
@@ -52,14 +53,14 @@
             <dependency>
                 <groupId>ch.tbmelabs</groupId>
                 <artifactId>actuator-endpoints-security-utils</artifactId>
-                <version>${ch.tbmelabs.version}</version>
+                <version>${actuator-endpoints-security-utils.version}</version>
             </dependency>
 
             <!-- https://oss.sonatype.org/service/local/repositories/releases/content/ch/tbmelabs/server-constants/ -->
             <dependency>
                 <groupId>ch.tbmelabs</groupId>
                 <artifactId>server-constants</artifactId>
-                <version>${ch.tbmelabs.version}</version>
+                <version>${server-constants.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
